fixed project headings left align and started projects section

--- a/styles.css
+++ b/styles.css
@@ -118,55 +118,59 @@ body {
 }
 
 .terminal-window {
-  text-align: left;
-  width: 80%;
-  height: 70%;
-  border-radius: 10px;
-  margin: auto;
-  position: relative;
-  margin-top: 0;
+    text-align: left;
+    width: 80%;
+    height: 70%;
+    border-radius: 10px;
+    margin: auto;
+    position: relative;
+    margin-top: 0;
 }
 
 .terminal-window header {
-  background: #E0E8F0;
-  height: 30px;
-  border-radius: 8px 8px 0 0;
-  padding-left: 10px;
+    background: linear-gradient(to bottom, rgb(238, 238, 238), rgb(210, 210, 210));
+    height: 25px;
+    border-radius: 8px 8px 0 0;
+    padding-left: 10px;
 }
 
 .terminal-window header .button {
-  width: 12px;
-  height: 12px;
-  margin: 10px 4px 0 0;
-  padding: 0;
-  display: inline-block;
-  border-radius: 8px;
+    width: 12.5px;
+    height: 12.5px;
+    margin-top: 7.5px;
+    margin-right: 5px;
+    padding: 0;
+    display: inline-block;
+    border-radius: 8px;
 }
 
 .terminal-window header .button.green {
-  background: #3BB662;
+    background: rgb(53, 204, 75);
+    border: 0.5px solid rgb(34, 181, 52);
 }
 
 .terminal-window header .button.yellow {
-  background: #E5C30F;
+    background: rgb(253, 192, 65);
+    border: 0.5px solid rgb(239, 170, 47);
 }
 
 .terminal-window header .button.red {
-  background: #E75448;
+    background: rgb(252, 98, 93);
+    border: 0.5px solid rgb(224, 72, 69);
 }
 
 .terminal-window div.terminal {
-  color: white;
-  font-family: Monaco, Menlo, "Consolas", "Courier New", "Courier";
-  font-size: 11pt;
-  background: #30353A;
-  padding: 10px;
-  padding-bottom: 15%;
-  box-sizing: border-box;
-  width: 100%;
-  height: auto;
-  border-radius: 0 0 10px 10px;
-  box-shadow:inset 0 1px 0 rgba(255,255,255,.6), 0 11px 35px 2px rgba(0,0,0,0.56);
+    color: white;
+    font-family: Monaco, Menlo, "Consolas", "Courier New", "Courier";
+    font-size: 11pt;
+    background: #30353A;
+    padding: 10px;
+    padding-bottom: 15%;
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    border-radius: 0 0 10px 10px;
+    box-shadow:inset 0 1px 0 rgba(255,255,255,.6), 0 11px 35px 2px rgba(0,0,0,0.56);
 }
 
 .terminal-window div.terminal .typed-cursor {
@@ -289,6 +293,15 @@ span {
     padding-bottom: 0;
 }
 
+.skill-container {
+    margin: 0;
+    width: 100%;
+}
+
+.skill-container > .container {
+    margin: 0 auto;
+}
+
 .skill-section-heading {
     color: #888888;
     text-align: center;
@@ -299,6 +312,10 @@ span {
     text-transform: uppercase;
     padding: 0;
     padding-top: 15%;
+}
+
+.even-row-skill-section-heading {
+    padding-bottom: 5%;
 }
 
 .alpha.skill {
@@ -323,7 +340,7 @@ span {
 /*     transition: 0.3s border; */
 /*     border: 2px solid #888888; */
 /* } */
- 
+
 .skill > h3 {
     position: absolute;
     padding: 0;
@@ -343,6 +360,19 @@ span {
     margin: 10% auto;
     width: 70%;
     height: auto;
+}
+
+.project-row-container {
+    height: 40vh;
+}
+
+.project-row-container > .row {
+    height: 100%;
+}
+
+.project-card {
+    border: 1px solid black;
+    height: 100%;
 }
 
 /* Larger than tablet */
@@ -425,10 +455,14 @@ span {
     .skill-section-heading {
         font-size: 1.5rem;
         position: absolute;
-        left: -16.75%;
-        margin-top: 6.6666666666%;
+        left: 0;
+        /* margin-top: 5%; */
         border: 1px solid #C1C1C1;
         padding: 0.5%;
+    }
+
+    .even-row-skill-section-heading {
+        padding-bottom: 0.5%;
     }
 
     .skill-container > h4 {
